--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,9 @@
-/* =============================================================================
-   HTML5 element display
-   ========================================================================== */
+/* HTML5 element display */
 
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
 audio[controls], canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
-
-/* =============================================================================
-   Base
-   ========================================================================== */
-
-/*
- * 1. Correct text resizing oddly in IE6/7 when body font-size is set using em units
- *    http://clagnut.com/blog/348/#c790
- * 2. Force vertical scrollbar in non-IE
- * 3. Remove Android and iOS tap highlight color to prevent entire container being highlighted
- *    www.yuiblog.com/blog/2010/10/01/quick-tip-customizing-the-mobile-safari-tap-highlight-color/
- * 4. Prevent iOS text size adjust on device orientation change, without disabling user zoom
- *    www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/
- */
+/* Base */
 
 html { font-size: 100%; overflow-y: scroll; -webkit-overflow-scrolling: touch; -webkit-tap-highlight-color: rgba(0,0,0,0); -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 
@@ -26,31 +11,22 @@ body { margin: 0; font-size: 13px; line-height: 1.231; }
 
 body, button, input, select, textarea { font-family: sans-serif; color: #222; }
 
-/* 
- * These selection declarations have to be separate
- * No text-shadow: twitter.com/miketaylr/status/12228805301
- * Also: hot pink!
- */
 
 ::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
 ::selection { background: #fe57a1; color: #fff; text-shadow: none; }
 
 
-/* =============================================================================
-   Links
-   ========================================================================== */
+/* Links */ 
 
 a { color: #00e; }
 a:visited { color: #551a8b; }
 a:focus { outline: thin dotted; }
 
-/* Improve readability when focused and hovered in all browsers: people.opera.com/patrickl/experiments/keyboard/test */
+
 a:hover, a:active { outline: 0; }
 
 
-/* =============================================================================
-   Typography
-   ========================================================================== */
+/* Typography */ 
 
 abbr[title] { border-bottom: 1px dotted; }
 
@@ -66,10 +42,8 @@ ins { background: #ff9; color: #000; text-decoration: none; }
 
 mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
 
-/* Redeclare monospace font family: en.wikipedia.org/wiki/User:Davidgothberg/Test59 */
 pre, code, kbd, samp { font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 1em; }
 
-/* Improve readability of pre-formatted text in all browsers */
 pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
 
 q { quotes: none; }
@@ -77,137 +51,81 @@ q:before, q:after { content: ""; content: none; }
 
 small { font-size: 85%; }
 
-/* Position subscript and superscript content without affecting line-height: gist.github.com/413930 */
 sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
 sup { top: -0.5em; }
 sub { bottom: -0.25em; }
 
 
-/* =============================================================================
-   Lists
-   ========================================================================== */
+/* Lists */ 
 
 ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
 dd { margin: 0 0 0 40px; }
 nav ul, nav ol { list-style: none; margin: 0; padding: 0; }
 
 
-/* =============================================================================
-   Embedded content
-   ========================================================================== */
-
-/*
- * Improve image quality when scaled in IE7
- * code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
- */
+/* Embedded content */ 
 
 img { border: 0; -ms-interpolation-mode: bicubic; }
-
-/*
- * Correct overflow displayed oddly in IE9 
- */
 
 svg:not(:root) {
     overflow: hidden;
 }
 
 
-/* =============================================================================
-   Figures
-   ========================================================================== */
+/* Figures */ 
 
 figure { margin: 0; }
 
 
-/* =============================================================================
-   Forms
-   ========================================================================== */
+/* Forms */ 
 
 form { margin: 0; }
 fieldset { border: 0; margin: 0; padding: 0; }
 
-/* 
- * 1. Correct color not inheriting in IE6/7/8/9 
- * 2. Correct alignment displayed oddly in IE6/7 
- */
-
 legend { border: 0; *margin-left: -7px; padding: 0; }
 
-/* Indicate that 'label' will shift focus to the associated form element */
 label { cursor: pointer; }
-
-/*
- * 1. Correct font-size not inheriting in all browsers
- * 2. Remove margins in FF3/4 S5 Chrome
- * 3. Define consistent vertical alignment display in all browsers
- */
 
 button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }
 
-/*
- * 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
- * 2. Correct inner spacing displayed oddly in IE6/7
- */
 
 button, input { line-height: normal; *overflow: visible; }
 
-/*
- * 1. Display hand cursor for clickable form elements
- * 2. Allow styling of clickable form elements in iOS
- */
-
 button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; }
-
-/*
- * Consistent box sizing and appearance
- */
 
 input[type="checkbox"], input[type="radio"] { box-sizing: border-box; }
 input[type="search"] { -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
 
-/* 
- * Remove inner padding and border in FF3/4
- * www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ 
- */
-
 button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
 
-/* Remove default vertical scrollbar in IE6/7/8/9 */
 textarea { overflow: auto; vertical-align: top; }
 
-/* Colors for form validity */
 input:valid, textarea:valid {  }
 input:invalid, textarea:invalid { background-color: #f0dddd; }
 
 
-/* =============================================================================
-   Tables
-   ========================================================================== */
+/* Tables */ 
 
 table { border-collapse: collapse; border-spacing: 0; }
 
 
-/* =============================================================================
-   Primary styles
-   Author: 
-   ========================================================================== */
-
-
-
-
+/* Primary styles
+   Author:  */ 
 
 
 body {
     min-height: 740px;
 
-    background: rgb(215, 215, 215);
-    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(240, 240, 240)), to(rgb(190, 190, 190)));
-    background: -webkit-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:    -moz-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:      -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
-    background:         radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190));
+    background: rgb(15, 15, 15);
+    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(40, 40, 40)), to(rgb(90, 90, 90)));
+    background: -webkit-radial-gradient(rgb(40, 40, 40), rgb(90, 90, 90));
+    background:    -moz-radial-gradient(rgb(40, 40, 40), rgb(90, 90, 90));
+    background:      -o-radial-gradient(rgb(40, 40, 40), rgb(90, 90, 90));
+    background:         radial-gradient(rgb(40, 40, 40), rgb(90, 90, 90));
 
     -webkit-font-smoothing: antialiased;
+    
+    color: #eee;
 }
 
 b, strong { font-weight: bold }
@@ -217,9 +135,6 @@ a {
     color: inherit;
     text-decoration: none;
     padding: 0 0.1em;
-    background: rgba(255,255,255,0.5);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.9);
-    border-radius: 0.2em;
     
     -webkit-transition: 0.5s;
     -moz-transition:    0.5s;
@@ -570,10 +485,8 @@ a:hover {
 
 
 
-/* =============================================================================
-   Non-semantic helper classes
-   Please define your styles before this section.
-   ========================================================================== */
+/* Non-semantic helper classes
+   Please define your styles before this section. */ 
 
 /* For image replacement */
 .ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
@@ -600,11 +513,9 @@ a:hover {
 
 
 
-/* =============================================================================
-   PLACEHOLDER Media Queries for Responsive Design.
+/* PLACEHOLDER Media Queries for Responsive Design.
    These override the primary ('mobile first') styles
-   Modify as content requires.
-   ========================================================================== */
+   Modify as content requires. */ 
 
 @media only screen and (min-width: 480px) {
   /* Style adjustments for viewports 480px and over go here */
