--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-/* HTML5 element display */
-
-article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
-audio[controls], canvas, video { display: inline-block; *display: inline; *zoom: 1; }
-
 /* Base */
 
 html { font-size: 100%; overflow-y: scroll; -webkit-overflow-scrolling: touch; -webkit-tap-highlight-color: rgba(0,0,0,0); -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
@@ -18,42 +13,12 @@ body, button, input, select, textarea { font-family: sans-serif; color: #222; }
 
 /* Links */ 
 
-a { color: #00e; }
 a:visited { color: #551a8b; }
 a:focus { outline: thin dotted; }
 
 
 a:hover, a:active { outline: 0; }
 
-
-/* Typography */ 
-
-abbr[title] { border-bottom: 1px dotted; }
-
-b, strong { font-weight: bold; }
-
-blockquote { margin: 1em 40px; }
-
-dfn { font-style: italic; }
-
-hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
-
-ins { background: #ff9; color: #000; text-decoration: none; }
-
-mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
-
-pre, code, kbd, samp { font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 1em; }
-
-pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
-
-q { quotes: none; }
-q:before, q:after { content: ""; content: none; }
-
-small { font-size: 85%; }
-
-sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
-sup { top: -0.5em; }
-sub { bottom: -0.25em; }
 
 
 /* Lists */ 
@@ -62,77 +27,64 @@ ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
 dd { margin: 0 0 0 40px; }
 nav ul, nav ol { list-style: none; margin: 0; padding: 0; }
 
-
-/* Embedded content */ 
-
-img { border: 0; -ms-interpolation-mode: bicubic; }
-
-svg:not(:root) {
-    overflow: hidden;
-}
-
-
-/* Figures */ 
-
-figure { margin: 0; }
-
-
-/* Forms */ 
-
-form { margin: 0; }
-fieldset { border: 0; margin: 0; padding: 0; }
-
-legend { border: 0; *margin-left: -7px; padding: 0; }
-
-label { cursor: pointer; }
-
-button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }
-
-
-button, input { line-height: normal; *overflow: visible; }
-
-button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; }
-
-input[type="checkbox"], input[type="radio"] { box-sizing: border-box; }
-input[type="search"] { -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
-
-button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
-
-textarea { overflow: auto; vertical-align: top; }
-
-input:valid, textarea:valid {  }
-input:invalid, textarea:invalid { background-color: #f0dddd; }
-
-
-/* Tables */ 
-
-table { border-collapse: collapse; border-spacing: 0; }
-
-
 /* Primary styles
-   Author:  */ 
-
+   Author: Diwank Singh Tomer @creatorrr  */ 
 
 body {
     min-height: 740px;
 
-    background: rgb(15, 15, 15);
-    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(40, 40, 40)), to(rgb(90, 90, 90)));
-    background: -webkit-radial-gradient(rgb(40, 40, 40), rgb(90, 90, 90));
-    background:    -moz-radial-gradient(rgb(40, 40, 40), rgb(90, 90, 90));
-    background:      -o-radial-gradient(rgb(40, 40, 40), rgb(90, 90, 90));
-    background:         radial-gradient(rgb(40, 40, 40), rgb(90, 90, 90));
+    background: #FFED73;
+    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(#FFF6BC), to(#FFED73));
+    background: -webkit-radial-gradient(#FFF6BC, #FFED73);
+    background:    -moz-radial-gradient(#FFF6BC, #FFED73);
+    background:      -o-radial-gradient(#FFF6BC, #FFED73);
+    background:         radial-gradient(#FFF6BC, #FFED73);
 
     -webkit-font-smoothing: antialiased;
-    
-    color: #eee;
 }
+
 
 b, strong { font-weight: bold }
 i, em { font-style: italic}
 
+h1 {
+	font-size: 190px;
+	color: #564C00;
+	font-family: 'Alfa Slab One', georgia, serif;
+	font-weight: bold;
+
+    -webkit-transition: 0.5s;
+    -moz-transition:    0.5s;
+    -ms-transition:     0.5s;
+    -o-transition:      0.5s;
+    transition:         0.5s;
+
+}
+
+h2 {
+	font-size: 100px;
+	color: #1F1E16;
+	font-family: 'Alfa Slab One', serif;
+	margin-top: -0.3em;
+	
+    -webkit-transition: 0.5s;
+    -moz-transition:    0.5s;
+    -ms-transition:     0.5s;
+    -o-transition:      0.5s;
+    transition:         0.5s;
+
+}
+
+h3 {
+	font-size: 100px;
+	color: #243279;
+	font-family: 'Chelsea Market', georgia, serif;
+}
+
 a {
-    color: inherit;
+    font-size: 80px;
+    color: #243279;
+    font-family: 'Passion One', sans-serif;
     text-decoration: none;
     padding: 0 0.1em;
     
@@ -144,9 +96,23 @@ a {
 }
 
 a:hover {
-    background: rgba(255,255,255,1);
-    text-shadow: -1px -1px 2px rgba(100,100,100,0.5);
+    border-bottom: 0.1em solid #2A41C0;
+    text-shadow: -2px -2px 4px rgba(100,100,100,0.5);
 }
+
+span {
+	font-size: 20px;
+	color: #222222;
+	font-family: 'Chelsea Market', georgia, serif;
+	
+    -webkit-transition: 0.3s;
+    -moz-transition:    0.3s;
+    -ms-transition:     0.3s;
+    -o-transition:      0.3s;
+    transition:         0.3s;
+
+}
+
 
 /* COMMON STEP STYLES */
 
@@ -160,7 +126,7 @@ a:hover {
     -o-box-sizing:      border-box;
     box-sizing:         border-box;
 
-    font-family: 'PT Serif', georgia, serif;
+    font-family: 'Passion One', georgia, serif;
 
     font-size: 48px;
     line-height: 1.5;
@@ -177,22 +143,19 @@ a:hover {
 }
 
 .step:not(.active) {
-    opacity: 0.3;
+    opacity: 0.4;
 }
 
 /* STEP SPECIFIC STYLES */
 
-/* impress.js title */
+/* name */
 
-#title {
+#name {
     padding: 0;
+    text-align: center;
 }
 
-#title .try {
-    font-size: 64px;
-    position: absolute;
-    top: -0.5em;
-    left: 1.5em;
+#name .title {
     
     -webkit-transform: translateZ(20px);
     -moz-transform:    translateZ(20px);
@@ -201,8 +164,9 @@ a:hover {
     transform:         translateZ(20px);
 }
 
-#title h1 {
-    font-size: 190px;
+#name h1 {
+    
+    margin: 0;
     
     -webkit-transform: translateZ(50px);
     -moz-transform:    translateZ(50px);
@@ -211,184 +175,19 @@ a:hover {
     transform:         translateZ(50px);
 }
 
-#title .footnote {
-    font-size: 32px;
-}
+#name.active h1 {
+    text-shadow: -3px -3px 6px rgba(100,100,100,0.5);
+    -webkit-transform: rotate(-6deg);
+    -moz-transform:    rotate(-6deg);
+    -ms-transform:     rotate(-6deg);
+    -o-transform:      rotate(-6deg);
+    transform:         rotate(-6deg);
 
-/* big thoughts */
-
-#big {
-    width: 600px;
-    text-align: center;
-    font-size: 60px;
-    line-height: 1;
-}
-
-#big b {
-    display: block;
-    font-size: 250px;
-    line-height: 250px;
-}
-
-#big .thoughts {
-    font-size: 90px;
-    line-height: 150px;
-}
-
-/* tiny ideas */
-
-#tiny {
-    width: 500px;
-    text-align: center;
-}
-
-#ing {
-    width: 500px;
-}
-
-#ing b {
-    display: inline-block;
-    -webkit-transition: 0.5s;
-    -moz-transition:    0.5s;
-    -ms-transition:     0.5s;
-    -o-transition:      0.5s;
-    transition:         0.5s;
-}
-
-#ing.active .positioning {
-    -webkit-transform: translateY(-10px);
-    -moz-transform:    translateY(-10px);
-    -ms-transform:     translateY(-10px);
-    -o-transform:      translateY(-10px);
-    transform:         translateY(-10px);
-
-    -webkit-transition-delay: 1.5s;
-    -moz-transition-delay:    1.5s;
-    -ms-transition-delay:     1.5s;
-    -o-transition-delay:      1.5s;
-    transition-delay:         1.5s;
-}
-
-#ing.active .rotating {
-    -webkit-transform: rotate(-10deg);
-    -moz-transform:    rotate(-10deg);
-    -ms-transform:     rotate(-10deg);
-    -o-transform:      rotate(-10deg);
-    transform:         rotate(-10deg);
-
-    -webkit-transition-delay: 1.75s;
-    -moz-transition-delay:    1.75s;
-    -ms-transition-delay:     1.75s;
-    -o-transition-delay:      1.75s;
-    transition-delay:         1.75s;
-}
-
-#ing.active .scaling {
-    -webkit-transform: scale(0.7);
-    -moz-transform:    scale(0.7);
-    -ms-transform:     scale(0.7);
-    -o-transform:      scale(0.7);
-    transform:         scale(0.7);
-
-    -webkit-transition-delay: 2s;
-    -moz-transition-delay:    2s;
-    -ms-transition-delay:     2s;
-    -o-transition-delay:      2s;
-    transition-delay:         2s;
-
-}
-
-/* imagination */
-
-#imagination {
-    width: 600px;
-}
-
-#imagination .imagination {
-    font-size: 78px;
-}
-
-/* it's in 3D */
-
-#its-in-3d span,
-#its-in-3d b {
-    display: inline-block;
-    -webkit-transform: translateZ(40px);
-    -moz-transform:    translateZ(40px);
-    -ms-transform:     translateZ(40px);
-    -o-transform:      translateZ(40px);
-     transform:        translateZ(40px);
-            
-    -webkit-transition: 0.5s;
-    -moz-transition:    0.5s;
-    -ms-transition:     0.5s;
-    -o-transition:      0.5s;
-    transition:         0.5s;
-}
-
-#its-in-3d .have {
-    -webkit-transform: translateZ(-40px);
-    -moz-transform:    translateZ(-40px);
-    -ms-transform:     translateZ(-40px);
-    -o-transform:      translateZ(-40px);
-    transform:         translateZ(-40px);
-}
-
-#its-in-3d .you {
-    -webkit-transform: translateZ(20px);
-    -moz-transform:    translateZ(20px);
-    -ms-transform:     translateZ(20px);
-    -o-transform:      translateZ(20px);
-    transform:         translateZ(20px);
-}
-
-#its-in-3d .noticed {
-    -webkit-transform: translateZ(-40px);
-    -moz-transform:    translateZ(-40px);
-    -ms-transform:     translateZ(-40px);
-    -o-transform:      translateZ(-40px);
-    transform:         translateZ(-40px);
-}
-
-#its-in-3d .its {
-    -webkit-transform: translateZ(60px);
-    -moz-transform:    translateZ(60px);
-    -ms-transform:     translateZ(60px);
-    -o-transform:      translateZ(60px);
-    transform:         translateZ(60px);
-}
-
-#its-in-3d .in {
-    -webkit-transform: translateZ(-10px);
-    -moz-transform:    translateZ(-10px);
-    -ms-transform:     translateZ(-10px);
-    -o-transform:      translateZ(-10px);
-    transform:         translateZ(-10px);
-}
-
-#its-in-3d .footnote {
-    font-size: 32px;
-
-    -webkit-transform: translateZ(-10px);
-    -moz-transform:    translateZ(-10px);
-    -ms-transform:     translateZ(-10px);
-    -o-transform:      translateZ(-10px);
-    transform:         translateZ(-10px);
-}
-
-#its-in-3d.active span,
-#its-in-3d.active b {
-    -webkit-transform: translateZ(0px);
-    -moz-transform:    translateZ(0px);
-    -ms-transform:     translateZ(0px);
-    -o-transform:      translateZ(0px);
-    transform:         translateZ(0px);
-    
-    -webkit-transition-delay: 1s;
-    -moz-transition-delay:    1s;
-    -ms-transition-delay:     1s;
-    -o-transition-delay:      1s;
-    transition-delay:         1s;
+    -webkit-transition-delay: 0.85s;
+    -moz-transition-delay:    0.85s;
+    -ms-transition-delay:     0.85s;
+    -o-transition-delay:      0.85s;
+    transition-delay:         0.85s;
 }
 
 /* overview step */
@@ -400,90 +199,39 @@ a:hover {
 /* on overview step everything is visible */
 
 #impress.step-overview .step {
-    opacity: 1;
+    opacity: 0.9;
 }
 
-
-/*
- * SLIDE STEP STYLES
- *
- * inspired by: http://html5slides.googlecode.com/svn/trunk/styles.css
- *
- * ;)
- */
-
-.slide {
-    display: block;
-
-    width: 900px;
-    height: 700px;
-
-    padding: 40px 60px;
-
-    border-radius: 10px;
-
-    background-color: white;
-
-    box-shadow: 0 2px 6px rgba(0, 0, 0, .1);
-    border: 1px solid rgba(0, 0, 0, .3);
-
-    font-family: 'Open Sans', Arial, sans-serif;
-
-    color: rgb(102, 102, 102);
-    text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
-
-    font-size: 30px;
-    line-height: 36px;
-
-    letter-spacing: -1px;
-}
-
-.slide q {
-    display: block;
-    font-size: 50px;
-    line-height: 72px;
-
-    margin-top: 100px;
-}
-
-.slide q strong {
-    white-space: nowrap;
-}
-
-
-/* IMPRESS NOT SUPPORTED STYLES */
+/* NOT-SUPPORTED STYLES */
 
 .fallback-message {
-    font-family: sans-serif;
+    font-family: "Passion One" serif;
     line-height: 1.3;
+    text-align: right;
     
     display: none;
-    width: 780px;
+    width: 88%;
     padding: 10px 10px 0;
-    margin: 20px auto;
+    margin: 1.2em auto;
 
-    border-radius: 10px;
-    border: 1px solid #E4C652;
+    border-radius: 0.2em;
+    border: 1px dashed #E4C652;
     background: #EEDC94;
 }
 
 .fallback-message p {
-    margin-bottom: 10px;
+    margin-bottom: 0.8em;
 }
 
 .impress-not-supported .step {
     position: relative;
     opacity: 1;
-    margin: 20px auto;
+    margin: 1.8em auto;
 }
 
 .impress-not-supported .fallback-message {
     display: block;
 }
-
-
-
-
 
 /* Non-semantic helper classes
    Please define your styles before this section. */ 
