--- a/css/main.css
+++ b/css/main.css
@@ -101,8 +101,8 @@ textarea {
 
 
 body {
-	background: url("../img/bg.png") repeat fixed 0% 0% transparent;
-	font-family: 'Bangers', cursive;
+	background: url("../img/bg.jpg") repeat fixed 0% 0% transparent;
+	font-family: 'Montserrat', 'Helvetica', sans-serif;
 	font-weight: bold;
 	font-size: 20px;
 	text-align: center;
@@ -123,7 +123,7 @@ h1 {
 	font-size: 120px;
 	font-weight: normal;
 	margin: 0;
-	font-family: 'Bangers', cursive;
+	font-family: 'Montserrat', cursive;
 	color: #eeeeee;
 	text-shadow: 2px 5px 6px #000;
 	line-height: .8;
@@ -136,7 +136,7 @@ h2 {
 	color: #eeeeee;
 	padding: 15px 0;
 	text-shadow: 1px 5px 4px #000;
-	font-family: 'Bangers', cursive;
+	font-family: 'Montserrat', cursive;
 }
 
 a, a:visited {
