--- a/css/socio.css
+++ b/css/socio.css
@@ -18,8 +18,9 @@
 
   text-align: center;
 
-/* Uncomment for 3D effect */
+/* Uncomment for 3D effect
   text-shadow: 1px 5px 4px #000;
+  */
 /* fix buttons height */
   line-height: 1em;
 /* you can be more comfortable with increased icons size */
