--- a/css/main.css
+++ b/css/main.css
@@ -97,21 +97,24 @@ textarea {
 
 
 body {
-	background: url("../img/bg.jpg") repeat fixed 0% 0% transparent;
-	font-family: 'proxima-nova', 'Helvetica', sans-serif;
-	font-size: 20px;
-	text-align: center;
+    background: url("../img/bg.jpg") repeat fixed 0% 0% transparent;
+    font-family: 'proxima-nova', 'Helvetica', sans-serif;
+    font-size: 20px;
+    text-align: center;
 }
 
 .main #content-wrapper {
-	padding-top: 10%;
-	overflow: hidden;
+    padding-top: 10%;
+    overflow: hidden;
 }
 
-.circular {
-  border-radius: 50%;
+.thick-border {
+  padding: 12px;      
   border: 6px solid white;
-  padding: 12px;
+}
+.circular {
+    border-radius: 50%;
+  
 }
 
 a, a:visited {
@@ -138,6 +141,72 @@ hr {
     border-bottom: 6px solid white;
     margin: 1em auto;
 }
+
+#headshot {
+  position: relative;
+  margin: 0 auto;
+  z-index: 1;
+
+  width: 320px;
+  height: 320px;
+
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -o-perspective: 1000px;
+  perspective: 1000px;
+}
+
+#card {
+  width: 100%;
+  height: 100%;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: all .4s ease-out;
+  -moz-transform-style: preserve-3d;
+  -moz-transition: all .4s ease-out;
+  -o-transform-style: preserve-3d;
+  -o-transition: all .4s ease-out;
+  transform-style: preserve-3d;
+  transition: all .4s ease-out;
+}
+
+#headshot:hover #card, #headshot.hover_effect #card {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+
+}
+
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.face.back {
+  display: block;
+  -webkit-transform: rotateY(180deg);
+  -webkit-box-sizing: border-box;
+  -moz-transform: rotateY(180deg);
+  -moz-box-sizing: border-box;
+  -o-transform: rotateY(180deg);
+  -o-box-sizing: border-box;
+  transform: rotateY(180deg);
+  box-sizing: border-box;
+  
+  color: white;
+  text-align: center;
+}
+
+.face img {
+    width: 320px;
+    height: 320px;
+}
+
 
 
 
